# GoAna

./: .gitignore  CMakeLists.txt  README.md
analysis/: CMakeLists.txt
analysis/comparison/: CMakeLists.txt
analysis/comparison/macro/: startCompare.sh.in
analysis/comparison/run/: runPlot.cxx  runRootToASCII.cxx  runcompare.cxx
analysis/options/: CMakeLists.txt  OscConfig.cxx  OscillationAnalysis.cfg.in  SimpleConfig.cxx  SimpleConfig.h
base/: CMakeLists.txt  SIDSBaseLinkDef.h
base/data/: CMakeLists.txt
base/data/io/: SIDSFileManager.cxx  SIDSFileManager.h
base/model/: CMakeLists.txt  ExpModel.cxx  OscModel.cxx
base/tools/: CMakeLists.txt  SIDSLog.cxx  SIDSLog.h  SIDSProgOptions.cxx  SIDSProgOptions.h
cmake/modules/: CheckCompiler.cmake  FairMacros.cmake  FindBAT.cmake  GenerateVersionInfo.cmake  ROOTMacros.cmake  WriteConfigFile.cmake
cmake/scripts/: FairVersion.h.default  FairVersion.h.tmp  config.csh.in  config.sh.in  fairroot-config.in
example/ex1/: CMakeLists.txt
example/ex1/lib/: ex1Options.cxx  ex1Options.h
example/ex1/run/: test.cxx
gobase/: CMakeLists.txt
gobase/tools/: FairMQLogger.cxx  FairProgOptions.cxx  FairProgOptions.h
